--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,13 +1,83 @@
-.gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 300px);
-  grid-gap: 2rem;
-  justify-content: center;
+body {
+  justify-content: right;
+  align-items: center;
+  position: relative;
+  min-height: 100vh; /*display items in center of screen*/
+  font-family: Hack, monospace;
+}
+div {
+  color: #727272;
+  text-align: center;
+}
+.nav-brand {
+  margin: 16px;
+  font-size: 66px;
+  color: #ccc;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: all 1s ease-in-out;
+  position: relative;
+}
+.nav-brand::before {
+  content: attr(data-item);
+  animation: colorize 3s infinite;
+  color: #8254ff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 0;
+  overflow: hidden;
 }
 
-@media (max-width: 786px) {
-  .gallery {
-    grid-template-columns: 1fr;
-    justify-items: center;
+@keyframes colorize {
+  0% {
+    height: 0;
   }
+  50% {
+    height: 100%;
+  }
+  100% {
+    height: 0;
+  }
+}
+.nav {
+  margin: 15px;
+  background-color: #f9f9f9;
+  padding: 16px;
+  position: relative;
+}
+.nav .nav-items {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+.nav .nav-items .nav-item {
+  margin: 50px;
+}
+.nav .nav-items .nav-item a {
+  text-decoration: none;
+  color: #8f8f8f;
+  font-size: 24px;
+  font-weight: 400;
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  text-transform: uppercase;
+}
+.nav .nav-items .nav-item a::before {
+  content: attr(data-item);
+  transition: 0.5s;
+  color: #8254ff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 0;
+  overflow: hidden;
+}
+.nav .nav-items .nav-item a:hover::before {
+  width: 100%;
+  transition: all 0.5s ease-in-out;
 }
