--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,11 +4,14 @@ body {
   position: relative;
   min-height: 100vh; /*display items in center of screen*/
   font-family: Hack, monospace;
+  box-sizing: border-box;
 }
 div {
   color: #727272;
   text-align: center;
+  display: inherit;
 }
+
 .nav-brand {
   margin: 16px;
   font-size: 66px;
@@ -46,7 +49,6 @@ div {
   margin: 15px;
   background-color: #f9f9f9;
   padding: 16px;
-  position: relative;
 }
 .nav .nav-items {
   list-style: none;
