--- a/client/src/App.css
+++ b/client/src/App.css
@@ -83,3 +83,23 @@ div {
   width: 100%;
   transition: all 0.5s ease-in-out;
 }
+
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 98%;
+  margin: auto;
+}
+.gallery img {
+  object-fit: cover;
+  height: 200px;
+  margin: auto;
+  padding: 5px;
+  opacity: 0.8;
+  transition: all 0.5s ease;
+}
+.gallery img:hover {
+  transform: scale(1.05);
+  opacity: 1;
+}
